@@ -105,6 +105,9 @@ void zend_register_generator_ce(void);
 ZEND_API void zend_generator_close(zend_generator *generator, zend_bool finished_execution);
 ZEND_API void zend_generator_resume(zend_generator *generator);
 
+void zend_generator_restore_call_stack(zend_generator *generator);
+zend_execute_data* zend_generator_freeze_call_stack(zend_execute_data *execute_data);
+
 void zend_generator_yield_from(zend_generator *generator, zend_generator *from);
 ZEND_API zend_execute_data *zend_generator_check_placeholder_frame(zend_execute_data *ptr);
 
